name:           verse
version:        0.0

synopsis:       A principled, extensible, text markup language.
description:    A principled, extensible, text markup language.

author:         P.C. Shyamshankar <sykora@lucentbeing.com>
maintainer:     P.C. Shyamshankar <sykora@lucentbeing.com>
copyright:      © P.C. Shyamshankar

license:        GPL-3
license-file:   LICENSE

category:       Text

build-type:     Simple
cabal-version:  >=1.10

library
    default-language: Haskell2010

    hs-source-dirs:
        src

    exposed-modules:
        Language.Verse.AST

    build-depends:
        base
