name:           verse
version:        0.0

synopsis:       A principled, extensible, text markup language.
description:    A principled, extensible, text markup language.

author:         P.C. Shyamshankar <sykora@lucentbeing.com>
maintainer:     P.C. Shyamshankar <sykora@lucentbeing.com>
copyright:      © P.C. Shyamshankar

license:        GPL-3
license-file:   LICENSE

category:       Text

build-type:     Simple
cabal-version:  >=1.10

library
    default-language: Haskell2010

    hs-source-dirs:
        src

    exposed-modules:
        Language.Verse.AST,
        Language.Verse.Parser

    build-depends:
        base,
        mtl,
        parsec

executable verse
    default-language: Haskell2010

    hs-source-dirs:
        src

    main-is:
        Verse.hs

    build-depends:
        base,
        parsec,
        mtl,
        verse

test-suite all
    default-language: Haskell2010
    type: exitcode-stdio-1.0

    hs-source-dirs:
        test

    main-is:
        Test.hs

    build-depends:
        base,
        parsec,
        mtl,

        HUnit,
        test-framework,
        test-framework-hunit,

        verse
